<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- App -->
    <string name="app_keep">Keep</string>
    <string name="app_history">History</string>

    <!-- Nav -->
    <string name="nav_vod">Vod</string>
    <string name="nav_live">Live</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_profile">My</string>

    <!-- Profile -->
    <string name="profile_subtitle">Library, sources and playback</string>
    <string name="profile_library">My library</string>
    <string name="profile_sources">Content sources</string>
    <string name="profile_playback">Playback</string>
    <string name="profile_preferences">Preferences</string>
    <string name="profile_data">Data and storage</string>

    <!-- Menu -->
    <string name="menu_sync">Sync</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_search">Search</string>
    <string name="menu_site">Site</string>
    <string name="menu_reset">Reset</string>

    <!-- Vod -->
    <string name="vod_home">Home</string>

    <string name="vod_home_featured">Featured today</string>
    <string name="vod_home_resume_title">Resume your last watch</string>
    <string name="vod_home_resume_meta">Your recent playback</string>
    <string name="vod_home_resume_summary">Continue from where you stopped.</string>
    <string name="vod_home_resume_action">Continue</string>
    <string name="vod_home_recommend">Site recommendations</string>
    <string name="vod_home_all">All</string>
    <string name="vod_home_continue">Continue watching</string>
    <string name="vod_home_continue_hint">Open a title to continue playback</string>

    <!-- Detail -->
    <string name="detail_flag">Flag</string>
    <string name="detail_episode">Episode</string>
    <string name="detail_quality">Quality</string>
    <string name="detail_content">Summary</string>
    <string name="detail_search">Searching <xliff:g name="name">%s</xliff:g></string>

    <!-- Device -->
    <string name="device_select">Select devices</string>
    <string name="device_offline">Device is offline</string>
    <string name="device_scan">Please scan QR Code to bind</string>

    <!-- Control -->
    <string name="control_speed">Speed</string>
    <string name="control_scale">Scale</string>
    <string name="control_track">Track</string>
    <string name="control_other">Other</string>

    <!-- Dialog -->
    <string name="dialog_delete_record">Delete all records?</string>
    <string name="dialog_delete_keep">All keep records will be removed.</string>
    <string name="dialog_delete_history">All history records will be removed.</string>

    <!-- Timer -->
    <string name="timer_5">5 minutes</string>
    <string name="timer_15">15 minutes</string>
    <string name="timer_30">30 minutes</string>
    <string name="timer_60">1 hour</string>
    <string name="timer_delay">Add 5 minutes</string>
    <string name="timer_cancel">Cancel timer</string>

    <!-- Hint -->
    <string name="shortcut">Shortcut has been added.</string>

    <string-array name="select_background">
        <item>Off</item>
        <item>On</item>
        <item>PiP</item>
    </string-array>

</resources>
