<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.textview.MaterialTextView android:textSize="16.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/play_timer" android:layout_marginStart="16.0dip" />
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:id="@+id/list" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
        <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@+id/time1" android:tag="5" android:background="@drawable/shape_accent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/timer_5" />
        <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@+id/time2" android:tag="15" android:background="@drawable/shape_accent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/timer_15" />
        <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@+id/time3" android:tag="30" android:background="@drawable/shape_accent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/timer_30" />
        <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@+id/time4" android:tag="60" android:background="@drawable/shape_accent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/timer_60" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:orientation="vertical" android:id="@+id/timer" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView android:textSize="48.0sp" android:textColor="@color/white" android:id="@+id/tick" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="24.0dip" />
        <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@+id/delay" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/timer_delay" android:singleLine="true" style="?materialButtonStyle" />
        <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@+id/reset" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/timer_cancel" android:singleLine="true" style="?materialButtonOutlinedStyle" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
