<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:tag="port" android:background="@color/xg_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@+id/statusBar" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="0.0dip" />
    <FrameLayout android:id="@+id/video" android:background="@color/black" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="225.0dip" android:layout_below="@id/statusBar">
        <androidx.media3.ui.PlayerView android:id="@+id/exo" android:layout_width="fill_parent" android:layout_height="fill_parent" app:surface_type="texture_view" style="@style/Player.Vod" />
        <master.flame.danmaku.ui.widget.DanmakuView android:id="@+id/danmaku" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <include android:id="@+id/widget" android:layout_width="fill_parent" android:layout_height="fill_parent" layout="@layout/view_widget_vod" />
        <include android:id="@+id/control" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" layout="@layout/view_control_vod" />
        <include android:id="@+id/progress" android:layout_width="fill_parent" android:layout_height="fill_parent" layout="@layout/view_progress" />
    </FrameLayout>
    <View android:background="@drawable/shadow" android:layout_width="fill_parent" android:layout_height="4.0dip" android:layout_below="@id/video" />
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@+id/swipeLayout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/video">
        <com.fongmi.android.tv.ui.custom.ProgressLayout android:id="@+id/progressLayout" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <androidx.core.widget.NestedScrollView android:id="@+id/scroll" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
                <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:background="@drawable/shape_paper_panel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip">
                        <com.google.android.material.textview.MaterialTextView android:textSize="22.0sp" android:textColor="@color/xg_text_primary" android:ellipsize="end" android:id="@+id/name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="2" />
                        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                            <com.google.android.material.textview.MaterialTextView android:textSize="12.0sp" android:textColor="@color/white" android:ellipsize="end" android:id="@+id/remark" android:background="@drawable/shape_vod_remark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="112.0dip" android:singleLine="true" />
                            <com.google.android.material.textview.MaterialTextView android:textSize="12.0sp" android:textColor="@color/control" android:id="@+id/site" android:background="@drawable/shape_vod_site" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_marginStart="6.0dip" />
                        </LinearLayout>
                        <com.google.android.material.textview.MaterialTextView android:textSize="13.0sp" android:textColor="@color/xg_nav_inactive" android:id="@+id/other" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:singleLine="true" />
                        <com.google.android.material.textview.MaterialTextView android:textSize="13.0sp" android:textColor="@color/xg_nav_inactive" android:id="@+id/director" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:singleLine="true" />
                        <com.google.android.material.textview.MaterialTextView android:textSize="13.0sp" android:textColor="@color/xg_nav_inactive" android:ellipsize="end" android:id="@+id/actor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:maxLines="1" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip">
                        <View android:background="@color/xg_primary" android:layout_width="3.0dip" android:layout_height="18.0dip" android:layout_marginEnd="8.0dip" />
                        <com.google.android.material.textview.MaterialTextView android:textSize="16.0sp" android:textColor="@color/xg_text_primary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/detail_flag" />
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView android:orientation="horizontal" android:id="@+id/flag" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                    <com.google.android.material.textview.MaterialTextView android:textSize="16.0sp" android:textColor="@color/xg_text_primary" android:id="@+id/quality_text" android:background="@drawable/shape_paper_panel" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/detail_quality" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
                    <androidx.recyclerview.widget.RecyclerView android:orientation="horizontal" android:id="@+id/quality" android:visibility="gone" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                    <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="12.0dip">
                        <View android:background="@color/xg_primary" android:layout_width="3.0dip" android:layout_height="18.0dip" android:layout_marginEnd="8.0dip" />
                        <com.google.android.material.textview.MaterialTextView android:textSize="16.0sp" android:textColor="@color/xg_text_primary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/detail_episode" />
                        <androidx.appcompat.widget.AppCompatImageView android:id="@+id/reverse" android:background="?selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/ic_action_reverse" android:layout_marginStart="8.0dip" />
                        <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
                        <androidx.appcompat.widget.AppCompatImageView android:id="@+id/more" android:background="?selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_action_more" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.recyclerview.widget.RecyclerView android:orientation="horizontal" android:id="@+id/episode" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:id="@+id/content_layout" android:background="@drawable/shape_paper_panel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip">
                        <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <View android:background="@color/xg_primary" android:layout_width="3.0dip" android:layout_height="18.0dip" android:layout_marginEnd="8.0dip" />
                            <com.google.android.material.textview.MaterialTextView android:textSize="16.0sp" android:textColor="@color/xg_text_primary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/detail_content" />
                        </LinearLayout>
                        <com.google.android.material.textview.MaterialTextView android:textSize="14.0sp" android:textColor="@color/xg_text_primary" android:ellipsize="end" android:id="@+id/content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="2.0dip" android:maxLines="4" android:lineSpacingExtra="4.0dip" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.recyclerview.widget.RecyclerView android:id="@+id/quick" android:visibility="gone" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" android:nestedScrollingEnabled="false" app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" app:spanCount="2" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.core.widget.NestedScrollView>
        </com.fongmi.android.tv.ui.custom.ProgressLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>
